--- a/01_RecyclerCardView/app/src/main/res/values/strings.xml
+++ b/01_RecyclerCardView/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">RecyclerCardView</string>
+    <string name="title_activity_period">PeriodActivity</string>
 </resources>
